nop bai tap lon nhom 45

--- a/sanpham1.html
+++ b/sanpham1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đèn pha lê</title>
+    <title>Hộp quà tái chế</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Đèn "pha lê" từ thìa nhựa 1 lần</h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Hộp quà tái chế</h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp6.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp1.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,11 +119,11 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Đèn "pha lê" từ thìa nhựa 1 lần. <br>
-                những chiếc thìa nhựa dùng 1 lần đừng vội bỏ đi, bởi nhờ sự sáng tạo cùng đôi bàn tay khéo léo của bạn sẽ tạo là những sản phẩm tuyệt vời
-
-                Bạn nghĩ sao về một chiếc đèn đẹp lung linh làm từ thìa nhựa trong, rất khả quan đấy nhé. Cách làm khá đơn giản hãy đục những lỗ nhỏ trên chiếc thìa, gắn phần đuôi thìa vào đui bóng đèn. Nên lựa chọn loại bóng đèn vàng, ánh sáng hắt
-                 ra sẽ thật lung linh, không kém phần sang trọng cho ngôi nhà của bạn.
+                Mô tả sản phẩm: <br> Một mẫu in đẹp Túi đựng nguyên 
+                liệu tái chế Hộp quà tặng cho Quà lưu niệm khoảnh khắc lớn của Mang Thai và Sinh Nhật! <br>
+                Hộp Quà Lưu Niệm Hộp Quà Tặng Tái Chế <br>
+                
+                Giới thiệu sản phẩm của Pattern Box
             </h5>
         </div>
     </div>   
