--- a/sanpham3.html
+++ b/sanpham3.html
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
