--- a/sanpham5.html
+++ b/sanpham5.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kỳ lân sắt</title>
+    <title>Sổ note tái chế</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Kỳ lân sắt</h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Sổ note tái chế </h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp9.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp5.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -119,8 +119,10 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Kỳ lân sắt <br>
-                Một quà tặng cá tính dành tặng cho những các bạn đam mê với đồ sắt tái chế
+                Mô tả sản phẩm: <br> Sổ note tái chế <br> quà tặng thân thiện môi 
+                trường với thiết kế độc đáo, bắt mắt, sáng tạo, là món quà tặng 
+                hoàn hảo cho các doanh nghiệp. Quà tặng này đáp ứng hoàn toàn các yêu cầu doanh nghiệp đặt ra tối ưu chi phí, hấp dẫn, độc đáo, 
+                khả năng quảng bá thương hiệu cao, phù hợp với các chiến dịch, sự kiện.
             </h5>
         </div>
     </div>   
