--- a/sanpham6.html
+++ b/sanpham6.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bể cá từ chiếc tivi cũ </title>
+    <title>Đèn pha lê</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Bể cá từ chiếc tivi cũ </h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Đèn "pha lê" từ thìa nhựa 1 lần</h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp7.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp6.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,17 +119,11 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Bể cá từ chiếc tivi cũ <br>
+                Mô tả sản phẩm: <br> Đèn "pha lê" từ thìa nhựa 1 lần. <br>
+                những chiếc thìa nhựa dùng 1 lần đừng vội bỏ đi, bởi nhờ sự sáng tạo cùng đôi bàn tay khéo léo của bạn sẽ tạo là những sản phẩm tuyệt vời
 
-                Với sự sáng tạo của con người thì không gì là không thể. Hãy tận dụng tivi trắng đen đã hỏng của bạn làm thành một bể cá, trông thật sinh động như chúng ta đang xem thế giới động vật vậy.
-                
-                Chiếc tivi thông thường dạng hộp cồng kềnh hoàn toàn có 
-                thể biến thành chiếc bể cá độc đáo và đẹp mắt chỉ bằng một vài bước 
-                đơn giản. Đầu tiên bạn hãy loại bỏ toàn bộ các linh kiện bên trong 
-                tivi, thay màn hình tivi cũ bằng lớp kính trong suốt rồi bịt thật
-                 kín các cạnh bằng keo silicon. Bạn có thể thả thêm vào chiếc bể 
-                 này một vài viên sỏi, cây trang trí để chiếc tivi bể cá này thêm đẹp và sống động. 
-                Cuối cùng bạn chỉ cần đổ nước và thả cá để hoàn thành ý tưởng này.
+                Bạn nghĩ sao về một chiếc đèn đẹp lung linh làm từ thìa nhựa trong, rất khả quan đấy nhé. Cách làm khá đơn giản hãy đục những lỗ nhỏ trên chiếc thìa, gắn phần đuôi thìa vào đui bóng đèn. Nên lựa chọn loại bóng đèn vàng, ánh sáng hắt
+                 ra sẽ thật lung linh, không kém phần sang trọng cho ngôi nhà của bạn.
             </h5>
         </div>
     </div>   
