--- a/sanpham7.html
+++ b/sanpham7.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sổ note tái chế</title>
+    <title>Bể cá từ chiếc tivi cũ </title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Sổ note tái chế </h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Bể cá từ chiếc tivi cũ </h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp5.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp7.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,10 +119,17 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Sổ note tái chế <br> quà tặng thân thiện môi 
-                trường với thiết kế độc đáo, bắt mắt, sáng tạo, là món quà tặng 
-                hoàn hảo cho các doanh nghiệp. Quà tặng này đáp ứng hoàn toàn các yêu cầu doanh nghiệp đặt ra tối ưu chi phí, hấp dẫn, độc đáo, 
-                khả năng quảng bá thương hiệu cao, phù hợp với các chiến dịch, sự kiện.
+                Mô tả sản phẩm: <br> Bể cá từ chiếc tivi cũ <br>
+
+                Với sự sáng tạo của con người thì không gì là không thể. Hãy tận dụng tivi trắng đen đã hỏng của bạn làm thành một bể cá, trông thật sinh động như chúng ta đang xem thế giới động vật vậy.
+                
+                Chiếc tivi thông thường dạng hộp cồng kềnh hoàn toàn có 
+                thể biến thành chiếc bể cá độc đáo và đẹp mắt chỉ bằng một vài bước 
+                đơn giản. Đầu tiên bạn hãy loại bỏ toàn bộ các linh kiện bên trong 
+                tivi, thay màn hình tivi cũ bằng lớp kính trong suốt rồi bịt thật
+                 kín các cạnh bằng keo silicon. Bạn có thể thả thêm vào chiếc bể 
+                 này một vài viên sỏi, cây trang trí để chiếc tivi bể cá này thêm đẹp và sống động. 
+                Cuối cùng bạn chỉ cần đổ nước và thả cá để hoàn thành ý tưởng này.
             </h5>
         </div>
     </div>   
