--- a/sanpham2.html
+++ b/sanpham2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Giá treo từ cành cây khô</title>
+    <title>Bóng đèn cháy tóc</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Giá treo từ cành cây khô</h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Bóng đèn cháy tóc</h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp8.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp2.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+                            <span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,15 +119,13 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Giá treo từ cành cây khô <br>
+                Mô tả sản phẩm: <br> Bóng đèn cháy tóc <br>
 
-                Những cành cây khô tưởng chừng chả làm gì ngoài việc dùng thành củi đun bếp nhưng thực chất nó lại nhiều tác dụng, ý nghĩa hơn bạn tưởng... Bạn có thể dùng nó để làm hàng dào, làm nhà cho thú cưng nhưng cũng có thể đưa nó vào trong căn hộ của mình bằng cách thiết kế giá treo.
+                Đừng vội vất đi những bóng đèn tròn bị cháy, chỉ cần khéo léo chút thôi nó sẽ trở thành đồ vật trang trí cực độc đáo.
                 
-                Nhìn giá treo bằng cành cây khô khá độc đáo,
-                 hòa hợp với thiên nhiên, lại còn rất tiết kiệm nữa.
-                  Với hình thức một giá phơi mini hết sức mộc mạc, tự nhiên và chân chất, chiếc giá treo đồ 
-                  trang sức từ cành cây khô của bạn trông thật thân thiện, 
-                có gì đó gần gũi với hình ảnh "phơi áo cây sào" khi xưa!
+                hãy biến chiếc bóng đèn rút ruột thành một cây đèn dầu đầy nghệ thuật, nhìn khá là sang trọng, và vô cùng "độc"
+                 không ở đâu có thể bán loại đèn dầu này. Nó có thể giúp bạn chụp được những bức ảnh đầy ấn tượng, nghệ thuật...và đôi lúc những 
+                sáng kiến này góp phần không nhỏ trong giá trị tinh thần cuộc sống
             </h5>
         </div>
     </div>   
