--- a/sanpham4.html
+++ b/sanpham4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bóng đèn cháy tóc</title>
+    <title>Đèn treo tường</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Bóng đèn cháy tóc</h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Đèn treo tường </h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp2.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp4.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,13 +119,10 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Bóng đèn cháy tóc <br>
-
-                Đừng vội vất đi những bóng đèn tròn bị cháy, chỉ cần khéo léo chút thôi nó sẽ trở thành đồ vật trang trí cực độc đáo.
-                
-                hãy biến chiếc bóng đèn rút ruột thành một cây đèn dầu đầy nghệ thuật, nhìn khá là sang trọng, và vô cùng "độc"
-                 không ở đâu có thể bán loại đèn dầu này. Nó có thể giúp bạn chụp được những bức ảnh đầy ấn tượng, nghệ thuật...và đôi lúc những 
-                sáng kiến này góp phần không nhỏ trong giá trị tinh thần cuộc sống
+                Mô tả sản phẩm: <br> Đèn treo tường <br>
+                 Tận dụng chiếc cốc giấy cũ để làm nên chiếc đèn treo vô
+                cùng hiện đại và độc đáo này. Nhìn vậy thôi chứ cách làm rất đơn giản, chỉ cần
+                 một chút tỉ mẩn bạn đã có thể tạo nên điểm nhấn cho căn nhà mình.
             </h5>
         </div>
     </div>   
