--- a/sanpham8.html
+++ b/sanpham8.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đèn treo tường</title>
+    <title>Giá treo từ cành cây khô</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Đèn treo tường </h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Giá treo từ cành cây khô</h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp4.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp8.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,10 +119,15 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Đèn treo tường <br>
-                 Tận dụng chiếc cốc giấy cũ để làm nên chiếc đèn treo vô
-                cùng hiện đại và độc đáo này. Nhìn vậy thôi chứ cách làm rất đơn giản, chỉ cần
-                 một chút tỉ mẩn bạn đã có thể tạo nên điểm nhấn cho căn nhà mình.
+                Mô tả sản phẩm: <br> Giá treo từ cành cây khô <br>
+
+                Những cành cây khô tưởng chừng chả làm gì ngoài việc dùng thành củi đun bếp nhưng thực chất nó lại nhiều tác dụng, ý nghĩa hơn bạn tưởng... Bạn có thể dùng nó để làm hàng dào, làm nhà cho thú cưng nhưng cũng có thể đưa nó vào trong căn hộ của mình bằng cách thiết kế giá treo.
+                
+                Nhìn giá treo bằng cành cây khô khá độc đáo,
+                 hòa hợp với thiên nhiên, lại còn rất tiết kiệm nữa.
+                  Với hình thức một giá phơi mini hết sức mộc mạc, tự nhiên và chân chất, chiếc giá treo đồ 
+                  trang sức từ cành cây khô của bạn trông thật thân thiện, 
+                có gì đó gần gũi với hình ảnh "phơi áo cây sào" khi xưa!
             </h5>
         </div>
     </div>   
