--- a/sanpham9.html
+++ b/sanpham9.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hộp quà tái chế</title>
+    <title>Kỳ lân sắt</title>
     <link rel="stylesheet" href="../js/bootstrap.min.css">
     <script src="../js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="/css/styleSanPham.css">
@@ -92,10 +92,10 @@
 </header>
 <div class="content">
     <div class="container">
-        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Hộp quà tái chế</h2>
+        <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Kỳ lân sắt</h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp1.png" alt="">
+                <img style="width: 400px; height: 400px;" src="/img/sp9.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
@@ -109,7 +109,7 @@
 							<span>	Thêm vào giỏ </span>
 						</button>
 						<button type="button" id="buy-now" class="hidden-xs buynow-style" name="add"> 
-							<span>Mua ngay</span>
+							<span> <a href="dathang.html"> Mua ngay</a></span>
 						</button>
 					</div>
 				</div>	 
@@ -119,11 +119,8 @@
             <br>
             <br>
             <h5>
-                Mô tả sản phẩm: <br> Một mẫu in đẹp Túi đựng nguyên 
-                liệu tái chế Hộp quà tặng cho Quà lưu niệm khoảnh khắc lớn của Mang Thai và Sinh Nhật! <br>
-                Hộp Quà Lưu Niệm Hộp Quà Tặng Tái Chế <br>
-                
-                Giới thiệu sản phẩm của Pattern Box
+                Mô tả sản phẩm: <br> Kỳ lân sắt <br>
+                Một quà tặng cá tính dành tặng cho những các bạn đam mê với đồ sắt tái chế
             </h5>
         </div>
     </div>   
