--- a/trangchu.html
+++ b/trangchu.html
@@ -171,36 +171,29 @@
                     </a></h1>
                 </div>
                 <div class="col-sm-4">
-                    <h3><a href="sanpham4.html"></a><img src="../img/sp4.png" alt=""></h3>
+                    <h3><a href="sanpham4.html"><img src="../img/sp4.png" alt=""></a></h3>
                     <h1><a href="sanpham4.html" style="color:rgb(3, 3, 3)">1.99$</a></h1>
                     <h1><a href="sanpham4.html" style="color:rgb(3, 3, 3)">
                         <i style="text-shadow: 1px 1px 1px gray;">Đèn Treo Tường </i>
                     </a></h1>
                 </div>
                 <div class="col-sm-4">
-                    <h3><a href="sanpham5.html"></a><img src="../img/sp5.png" alt=""></h3>
+                    <h3><a href="sanpham5.html"><img src="../img/sp5.png" alt=""></a></h3>
                     <h1><a href="sanpham5.html" style="color:rgb(3, 3, 3)">0.49$</a></h1>
                     <h1><a href="sanpham5.html" style="color:rgb(3, 3, 3)">
                         <i style="text-shadow: 1px 1px 1px gray;">Sổ Note</i>
                     </a></h1>
                 </div>
                 <div class="col-sm-4">
-<<<<<<< HEAD
+                    
                     <h3><a href="sanpham6.html"><img src="../img/sp6.png" alt=""></a></h3>
-=======
-                    <h3><a href="sanpham6.html"></a><img src="../img/sp6.png" alt=""></h3>
->>>>>>> origin/master
                     <h1><a href="sanpham6.html" style="color:rgb(3, 3, 3)">1.99$</a></h1>
                     <h1><a href="sanpham6.html" style="color:rgb(3, 3, 3)">
                         <i style="text-shadow: 1px 1px 1px gray;">Đèn Pha Lê</i>
                     </a></h1>
                 </div>
                 <div class="col-sm-4">
-<<<<<<< HEAD
                     <h3><a href="sanpham7.html"><img src="../img/sp7.png" alt=""></a></h3>
-=======
-                    <h3><a href="sanpham7.html"></a><img src="../img/sp7.png" alt=""></h3>
->>>>>>> master
 
                     <h1><a href="sanpham7.html" style="color:rgb(3, 3, 3)">0.99$</a></h1>
                     <h1><a href="sanpham7.html" style="color:rgb(3, 3, 3)">
@@ -208,22 +201,14 @@
                     </a></h1>
                 </div>
                 <div class="col-sm-4">
-<<<<<<< HEAD
                     <h3><a href="sanpham8.html"><img src="../img/sp8.png" alt=""></a></h3>
-=======
-                    <h3><a href="sanpham8.html"></a><img src="../img/sp8.png" alt=""></h3>
->>>>>>> origin/master
                     <h1><a href="sanpham8.html" style="color:rgb(3, 3, 3)">99.99$</a></h1>
                     <h1><a href="sanpham8.html" style="color:rgb(3, 3, 3)">
                         <i style="text-shadow: 1px 1px 1px gray;">Giá Treo Cây</i>
                     </a></h1>
                 </div>
                 <div class="col-sm-4">
-<<<<<<< HEAD
                     <h3><a href="sanpham9.html"><img src="../img/sp9.png" alt=""></a></h3>
-=======
-                    <h3><a href="sanpham9.html"></a><img src="../img/sp9.png" alt=""></h3>
->>>>>>> origin/master
                     <h1><a href="sanpham9.html" style="color:rgb(3, 3, 3)">99.99$</a></h1>
                     <h1><a href="sanpham9.html" style="color:rgb(3, 3, 3)">
                         <i style="text-shadow: 1px 1px 1px gray;">Kỳ Lân Sắt</i>
