nop bai tap lon nhom 45

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="js/bootstrap.min.css">
     <script src="js/bootstrap.min.css"></script>
     <link rel="stylesheet" href="css/styleTrangChu.css">
-    <link href="//theme.hstatic.net/1000185342/1000830674/14/plugin-style.css?v=20" rel="preload stylesheet" as="style" type="text/css">
+    <link href="theme.hstatic.net/1000185342/1000830674/14/plugin-style.css?v=20" rel="preload stylesheet" as="style" type="text/css">
 <style>*{
     margin: auto;
     padding: 0px;
@@ -207,12 +207,12 @@ footer{
                             <ul class="list-inline list-unstyled mb-0">
                                 <li class="list-inline-item mr-0">
                                     <a href="#" class="search js-search-desktop" data-original-title="Tìm kiếm" data-tooltip="tooltip">
-                                        <img width="20" height="20" src="//theme.hstatic.net/1000185342/1000830674/14/searcg-icon.svg?v=20" alt="Tìm kiếm">
+                                        <img width="20" height="20" src="theme.hstatic.net/1000185342/1000830674/14/searcg-icon.svg?v=20" alt="Tìm kiếm">
                                     </a>              
                                 </li> 
                                 <li class="list-inline-item mr-0 hidden-xs hidden-sm">
                                     <a href="dangnhap.html" data-original-title="Đăng nhập" class="login" data-tooltip="tooltip">
-                                        <img width="20" height="20" src="//theme.hstatic.net/1000185342/1000830674/14/user-account.svg?v=20" alt="Tài khoản">
+                                        <img width="20" height="20" src="theme.hstatic.net/1000185342/1000830674/14/user-account.svg?v=20" alt="Tài khoản">
                                     </a>
                                 </li>
                                 <li class="list-inline-item mr-0">
@@ -223,7 +223,7 @@ footer{
                                 </li>
                                 <li class="list-inline-item mr-0">
                                     <a href="#" class="cart js-call-minicart" data-original-title="Giỏ hàng" data-tooltip="tooltip">
-                                        <img width="20" height="20" src="//theme.hstatic.net/1000185342/1000830674/14/shopping-cart.svg?v=20" alt="Giỏ hàng">
+                                        <img width="20" height="20" src="theme.hstatic.net/1000185342/1000830674/14/shopping-cart.svg?v=20" alt="Giỏ hàng">
                                         <span class="js-number-cart number-cart">1</span>
                                     </a>
                                 </li>
@@ -294,7 +294,7 @@ footer{
        
             <div class="row">
                 <div class="col-sm-4">
-                    <h3><a href="sanpham1.html"><img src="../img/sp1.png" alt=""></a></h3>
+                    <h3><a href="sanpham1.html"><img src="img/sp1.png" alt=""></a></h3>
                     <h1><a href="sanpham1.html" style="color:rgb(3, 3, 3)">1$</a></h1>
                     <h1><a href="sanpham1.html" style="color:rgb(3, 3, 3)">
                         <i style="text-shadow: 1px 1px 1px gray;">Hộp Quà Lưu Niệm</i>
