--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Trang Chủ</title>
     <link rel="stylesheet" href="js/bootstrap.min.css">
     <script src="js/bootstrap.min.css"></script>
-    <link rel="stylesheet" href="css/styleTrangChu.css">
+    <link rel="stylesheet" href="css/styleTrangchu.css">
     <link href="//theme.hstatic.net/1000185342/1000830674/14/plugin-style.css?v=20" rel="preload stylesheet" as="style" type="text/css">
 </head>
 
