--- a/html/sanpham7.html
+++ b/html/sanpham7.html
@@ -347,7 +347,7 @@
         <h2 margin-bottom: 30px;>Chi tiết sản phẩm: Bể cá từ chiếc tivi cũ </h2>
         <div class="row">
             <div class="col-5">
-                <img style="width: 400px; height: 400px;" src="/img/sp7.png" alt="">
+                <img style="width: 400px; height: 400px;" src="../img/sp7.png" alt="">
             </div>
             <div class="col-xs-12 selector-actions d-flex d-flex-center pd-top-10">
 				<div class="quantity-area">
