--- a/html/dangky.html
+++ b/html/dangky.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styledangki.css">
+    <link rel="stylesheet" href="../css/styledangki.css">
     <link href="//theme.hstatic.net/1000185342/1000830674/14/plugin-style.css?v=20" rel="preload stylesheet" as="style" type="text/css">
 
     <title>Document</title>
@@ -58,7 +58,7 @@
 
                 <div class="logo col-md-2 col-xs-6 col-sm-4 pd-right-0">
                     <a href="trangchu.html">
-                        <img class="dt-width-auto" height="50" width="185" src="/img/logo.png" alt="trilishop">
+                        <img class="dt-width-auto" height="50" width="185" src="../img/logo.png" alt="trilishop">
                     </a>
                 </div>
                 <nav class="col-md-8 hidden-xs hidden-sm pd-right-0">
