--- a/html/dangnhap.html
+++ b/html/dangnhap.html
@@ -22,7 +22,7 @@
    
                     <div class="logo col-md-2 col-xs-6 col-sm-4 pd-right-0">
                         <a href="trangchu.html">
-                            <img class="dt-width-auto" height="50" width="185" src="/img/logo.png" alt="trilishop">
+                            <img class="dt-width-auto" height="50" width="185" src="../img/logo.png" alt="trilishop">
                         </a>
                     </div>
                     <nav class="col-md-8 hidden-xs hidden-sm pd-right-0">
